--- a/ACG/ACG.html
+++ b/ACG/ACG.html
@@ -61,7 +61,9 @@ Founded by Benjamin W. Sangor, ACG was co-owned by Fred Iger from 1948 to 1967. 
 </p><p>
 <li><a href="../AdventuresIntoTheUnknown/AdventuresIntoTheUnknown.html">Adventures into the Unknown</a> (1948)
 <li><a href="ACG1.jpg">Blazing West</a> (1948)
-<li><a href="ACG2.jpg">Commander Battle and the Atomic Sub (1954)
+<li><a href="ACG29.jpg">Chuckle</a> (1945)
+<li><a href="ACG32.jpg">Clutching Hand</a> (1954)
+<li><a href="ACG2.jpg">Commander Battle and the Atomic Sub</a> (1954)
 <li><a href="ACG3.jpg">Cookie</a> (1946)
 <li><a href="ACG4.jpg">Dizzy Dames</a> (1952)
 <li><a href="../ForbiddenWorlds/ForbiddenWorlds.html">Forbidden Worlds</a> (1951)
@@ -69,12 +71,13 @@ Founded by Benjamin W. Sangor, ACG was co-owned by Fred Iger from 1948 to 1967. 
 <li><a href="ACG6.jpg">Gasp!</a> (1967)
 <li><a href="ACG7.jpg">Giggle Comics</a> (1943)
 <li><a href="ACG8.jpg">Ha Ha Comics</a> (1943)
-<li><a href="ACG9.jpg">Hi Jinks</a> (1947)
 <li><a href="ACG10.jpg">Herbie</a> (1964)
+<li><a href="ACG9.jpg">Hi Jinks</a> (1947)
 <li><a href="ACG11.jpg">Hooded Horseman</a> (1952)
-<li><a href="ACG12.jpg">The Kilroys</a> (1947)
+<li><a href="ACG12.jpg">Kilroys</a> (1947)
 <li><a href="ACG13.jpg">Lovelorn</a> (1949)
 <li><a href="ACG14.jpg">Magic Agent</a> (1962)
+<li><a href="ACG30.jpg">Merry-Go-Round</a> (1945)
 <li><a href="ACG15.jpg">Midnight Mystery</a> (1961)
 <li><a href="ACG16.jpg">Milton Gross Funnies</a> (1947)
 <li><a href="ACG17.jpg">Moon Mullins</a> (1947)
@@ -82,19 +85,16 @@ Founded by Benjamin W. Sangor, ACG was co-owned by Fred Iger from 1948 to 1967. 
 <li><a href="../OutOfTheNight/OutOfTheNight.html">Out of the Night</a> (1952)
 <li><a href="ACG19.jpg">Romantic Adventures</a> (1949)
 <li><a href="ACG20.jpg">Search For Love</a> (1950)
+<li><a href="ACG31.jpg">Sheriff of Cochise</a> (1957)
 <li><a href="../SkeletonHand/SkeletonHand.html">Skeleton Hand</a> (1952)
-<li><a href="ACG21.jpg">Spencer Spook</a> (1955)
 <li><a href="ACG22.jpg">Soldiers of Fortune</a> (1951)
+<li><a href="ACG21.jpg">Spencer Spook</a> (1955)
 <li><a href="ACG23.jpg">Spy and Counterspy</a> (1949)
 <li><a href="ACG24.jpg">Spy Hunters</a> (1949)
 <li><a href="ACG25.jpg">Teepee Tim</a> (1955)
 <li><a href="ACG26.jpg">Unknown Worlds</a> (1960)
 <li><a href="ACG27.jpg">Wrangler Great Moments in Rodeo</a> (1955)
 <li><a href="ACG28.jpg">Young Heroes</a> (1955)
-<li><a href="ACG29.jpg">Chuckle</a> (1945)
-<li><a href="ACG30.jpg">Merry-Go-Round</a> (1945)
-<li><a href="ACG31.jpg">Sheriff of Coshise</a> (1957)
-<li><a href="ACG32.jpg">The Clutching Hand</a> (1954)
 </p>
 
 </body>
