--- a/index.html
+++ b/index.html
@@ -635,6 +635,13 @@
 </tr>
 
 <tr>
+<td>ABC: A-Z, Greyshirt and Cobweb</td>
+<td>2006</td>
+<td>America's Best</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abdo Publishing</td>
 <td>1985</td>
 <td>Publisher</td>
@@ -1819,6 +1826,14 @@
 <td>Publisher</td>
 <td><a href="AmericasBest/AmericasBest.html">Details</a></td>
 </tr>
+
+<tr>
+<td>America's Best Comics</td>
+<td>2003</td>
+<td>America's Best</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>American</td>
@@ -3631,6 +3646,13 @@
 </tr>
 
 <tr>
+<td>Blazing West</td>
+<td>1948</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blink</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -4868,6 +4890,12 @@
 </tr>
 
 <tr>
+<td>Chuckle</td>
+<td>1945</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+
+<tr>
 <td>Cindy Comics</td>
 <td>1947</td>
 <td>Marvel</td>
@@ -4992,6 +5020,12 @@
 <td>Marvel</td>
 <td><a href="CloakDagger/CloakDagger.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Clutching Hand</td>
+<td>1954</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 
 <tr>
 <td>Cocaine Comix</td>
@@ -5204,6 +5238,13 @@
 </tr>
 
 <tr>
+<td>Commander Battle and the Atomic Sub</td>
+<td>1954</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Commando Adventures</td>
 <td>1957</td>
 <td>Atlas</td>
@@ -5327,6 +5368,13 @@
 <td>1978</td>
 <td>Baronet Books</td>
 <td><a href="ContractWithGod/contractwithgod.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cookie</td>
+<td>1946</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6618,7 +6666,6 @@
 <td><a href="DisneyPrincess/DisneyPrincess.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>District X</td>
 <td>2004</td>
@@ -6631,6 +6678,13 @@
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="Division13/Division13.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dizzy Dames</td>
+<td>1952</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8461,6 +8515,13 @@
 </tr>
 
 <tr>
+<td>Funny Films</td>
+<td>1949</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Funny Frolics</td>
 <td>1945</td>
 <td>Timely</td>
@@ -8703,6 +8764,13 @@
 <td>1918</td>
 <td>Tribune Media Services</td>
 <td><a href="GasolineAlley/GasolineAlley.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gasp!</td>
+<td>1967</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8955,6 +9023,13 @@
 <td>2018</td>
 <td>Image</td>
 <td><a href="GideonFalls/GideonFalls.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Giggle Comics</td>
+<td>1943</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9360,6 +9435,13 @@
 <td>2006</td>
 <td>Dark Horse</td>
 <td><a href="HGWWOTW/HGWWOTW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ha Ha Comics</td>
+<td>1943</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9805,6 +9887,13 @@
 </tr>
 
 <tr>
+<td>Herbie</td>
+<td>1964</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hercules</td>
 <td>1982</td>
 <td>Marvel</td>
@@ -9830,6 +9919,13 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="HeroesReborn/HeroesReborn.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hi Jinks</td>
+<td>1947</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9935,6 +10031,13 @@
 <td>2002</td>
 <td>Marvel</td>
 <td><a href="Hood/Hood.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hooded Horsemen</td>
+<td>1952</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <td>Hooded Menace</td>
@@ -11429,6 +11532,13 @@
 </tr>
 
 <tr>
+<td>Kilroys</td>
+<td>1947</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King Arthur and the Knights of Justice</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -11837,7 +11947,7 @@
 <tr>
 <td>League of Extraordinary Gentlemen</td>
 <td>1999</td>
-<td>DC</td>
+<td>America's Best</td>
 <td><a href="LeagueOfExtraordinaryGentlemen/LeagueOfExtraordinaryGentlemen.html">Details</a></td>
 </tr>
 
@@ -12290,6 +12400,13 @@
 </tr>
 
 <tr>
+<td>Lovelorn</td>
+<td>1949</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lovers</td>
 <td>1952</td>
 <td>Marvel</td>
@@ -12451,6 +12568,13 @@
 </tr>
 
 <tr>
+<td>Magic Agent</td>
+<td>1962</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magic Comics</td>
 <td>1939</td>
 <td>David McKay</td>
@@ -12547,6 +12671,14 @@
 <td>Charlton</td>
 <td><a href="MGDG/MDGD.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Many Worlds of Tesla Strong</td>
+<td>2003</td>
+<td>America's Best</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>Mara</td>
@@ -13374,6 +13506,13 @@
 <td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
+<td>Merry-Go-Round</td>
+<td>1945</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Metal Men</td>
 <td>1963</td>
 <td>DC</td>
@@ -13455,6 +13594,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="MidnightMen/MidnightMen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Midnight Mystery</td>
+<td>1961</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13567,6 +13713,13 @@
 <td>1945</td>
 <td>Creator</td>
 <td><a href="MiltonCaniff/MiltonCaniff.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Milton Gross Funnies</td>
+<td>1947</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13798,6 +13951,13 @@
 <td>1980</td>
 <td>Marvel</td>
 <td><a href="MoonKnight/MoonKnight.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Moon Mullins</td>
+<td>1947</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14855,6 +15015,13 @@
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="OpenSpace/OpenSpace.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Operation Peril</td>
+<td>1950</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16330,6 +16497,13 @@
 </tr>
 
 <tr>
+<td>Romantic Adventures</td>
+<td>1949</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Romantic Affairs</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -16798,6 +16972,13 @@
 </tr>
 
 <tr>
+<td>Search For Love</td>
+<td>1950</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Seconds</td>
 <td>2014</td>
 <td>Random House</td>
@@ -17127,6 +17308,13 @@
 </tr>
 
 <tr>
+<td>Sheriff of Cochise</td>
+<td>1957</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shintaro Kago</td>
 <td>1969</td>
 <td>Creator</td>
@@ -17442,6 +17630,13 @@
 </tr>
 
 <tr>
+<td>Smax</td>
+<td>2003</td>
+<td>America's Best</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Smitty</td>
 <td>1922</td>
 <td>Cupples &amp; Leon</td>
@@ -17481,6 +17676,13 @@
 <td>2002</td>
 <td>Marvel</td>
 <td><a href="SoldierX/SoldierX.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Soldiers of Fortune</td>
+<td>1951</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17715,6 +17917,13 @@
 </tr>
 
 <tr>
+<td>Spencer Spook</td>
+<td>1955</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spicy Adventure Stories</td>
 <td>1934</td>
 <td>Culture Publications</td>
@@ -17834,6 +18043,13 @@
 </tr>
 
 <tr>
+<td>Spy and Counterspy</td>
+<td>1949</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spy Cases</td>
 <td>1950</td>
 <td>Marvel</td>
@@ -17845,6 +18061,13 @@
 <td>1951</td>
 <td>Marvel</td>
 <td><a href="SpyFighters/SpyFighters.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spy Hunters</td>
+<td>1949</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18689,6 +18912,13 @@
 </tr>
 
 <tr>
+<td>Teepee Tim</td>
+<td>1955</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Television Puppet Show</td>
 <td>1950</td>
 <td>Avon</td>
@@ -18700,6 +18930,13 @@
 <td>1984</td>
 <td>Orion</td>
 <td><a href="Terminator/Terminator.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terra Obscura</td>
+<td>2003</td>
+<td>America's Best</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19505,6 +19742,13 @@
 <td>2008</td>
 <td>Vertigo</td>
 <td><a href="UnknownSoldier/UnknownSoldier.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Unknown Worlds</td>
+<td>1960</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20622,6 +20866,13 @@
 </tr>
 
 <tr>
+<td>Wrangler Great Moments in Rodeo</td>
+<td>1955</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Writing For Comics</td>
 <td>2003</td>
 <td>Avatar</td>
@@ -20836,6 +21087,13 @@
 <td>1949</td>
 <td>Marvel</td>
 <td><a href="YoungHearts/YoungHearts.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Young Heroes</td>
+<td>1955</td>
+<td>ACG</td>
+<td><a href="ACG/ACG.html">Details</a></td>
 </tr>
 
 <tr>
