--- a/index.html
+++ b/index.html
@@ -1681,6 +1681,13 @@
 </tr>
 
 <tr>
+<td>Alvar Mayor: Death and Silver</td>
+<td>1989</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>AM Works</td>
 <td>1995</td>
 <td>Publisher</td>
@@ -2505,6 +2512,13 @@
 <td>1951</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Attu</td>
+<td>1989</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -4841,6 +4855,13 @@
 </tr>
 
 <tr>
+<td>Chimera</td>
+<td>1996</td>
+<td>5th Panel</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>China Sea</td>
 <td>1989</td>
 <td>Aircel</td>
@@ -5725,6 +5746,13 @@
 <td>2010</td>
 <td>Vertigo</td>
 <td><a href="CubaMyRevolution/CubaMyRevolution.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cubbie Bear Show</td>
+<td>1995</td>
+<td>5th Panel</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6923,6 +6951,13 @@
 <td>1922</td>
 <td>Creator</td>
 <td><a href="DougWildey/DougWildey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Downtime</td>
+<td>1989</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -9170,6 +9205,13 @@
 <td>2003</td>
 <td>DC</td>
 <td><a href="GothamCentral/GothamCentral.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gothic</td>
+<td>1997</td>
+<td>5th Panel</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14080,6 +14122,13 @@
 </tr>
 
 <tr>
+<td>Moving Fortress</td>
+<td>1988</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Mr. A</td>
 <td>1967</td>
 <td>Steve Ditko</td>
@@ -15479,6 +15528,13 @@
 </tr>
 
 <tr>
+<td>Pieces</td>
+<td>1997</td>
+<td>5th Panel</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pines Comics</td>
 <td>1936</td>
 <td>Publisher</td>
@@ -16054,6 +16110,13 @@
 <td>1955</td>
 <td>Atlas</td>
 <td><a href="RawhideKid/RawhideKid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Razorwire</td>
+<td>1996</td>
+<td>5th Panel</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18561,6 +18624,13 @@
 </tr>
 
 <tr>
+<td>Subterra</td>
+<td>1989</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Suburban Jersey Ninja She-Devils</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -18607,6 +18677,13 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="SunfireAndBigHeroSix/SunfireAndBigHeroSix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Bad James Dynomite</td>
+<td>2005</td>
+<td>5-D Comics</td>
+<td><a href="5DComics/5DComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20625,6 +20702,13 @@
 <td>1982</td>
 <td>PC</td>
 <td><a href="PacificComics/PacificComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wilderness</td>
+<td>1989</td>
+<td>4 Winds</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td> 
 </tr>
 
 <tr>
