--- a/AblazePublishing/AblazePublishing.html
+++ b/AblazePublishing/AblazePublishing.html
@@ -21,12 +21,14 @@
 <div class="mySlides" style="text-align: center;"><img src="Cimmerian1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="GungHo1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="GungHo2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kidz1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="VampireState1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="VampireState2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WildThing1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -36,12 +38,12 @@ Ablaze Publishing was startedin 2019 with Un/Sacred.
 </p><p>
 Titles
 </p><p>
-<li>Cimmerian: Queen of the Black Coast (2020)
-<li>Gung-Ho (2019)
-<li>Kidz (2020)
-<li>Un/Sacred (2019)
-<li>Vampire State Building (2019)
-<li>Wild Thing Or: My Life as a Wolf (2019)
+<li><a href="Cimmerian1.jpg">Cimmerian: Queen of the Black Coast</a> (2020)
+<li><a href="GungHo1.jpg">Gung-Ho</a> (2019)
+<li><a href="Kidz1.jpg">Kidz</a> (2020)
+<li><a href="UnSacred1.jpg">Un/Sacred</a> (2019)
+<li><a href="VampireState1.jpg">Vampire State Building</a> (2019)
+<li><a href="WildThing1.jpg">Wild Thing</a> (2019)
 </p>
 
 </body>
