--- a/AbramsBooks/AbramsBooks.html
+++ b/AbramsBooks/AbramsBooks.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<h1>Abrams Books</h1>
-<p>
+
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -26,12 +25,79 @@
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AbramsBooks72.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+<p>
+Abrams Books (<a href="https://www.abramsbooks.com/">abramsbooks.com</a>), formerly Harry N. Abrams, Inc. (HNA), is an American publisher of art and illustrated books, children's books, and stationery.The enterprise is a subsidiary of the French publisher La Martinière Groupe. Run by President and CEO Michael Jacobs, Abrams publishes and distributes approximately 250 titles annually and has more than 3,000 titles in print. Abrams also distributes publications for the Victoria and Albert Museum, Tate, Vendome Press (in North America), Booth Clibborn Editions, SelfMadeHero, MoMA Children's Books, and 5 Continents.
 </p><p>
-Abrams, formerly Harry N. Abrams, Inc. (HNA), is an American publisher of art and illustrated books, children's books, and stationery.The enterprise is a subsidiary of the French publisher La Martinière Groupe. Run by President and CEO Michael Jacobs, Abrams publishes and distributes approximately 250 titles annually and has more than 3,000 titles in print.Abrams also distributes publications for the Victoria and Albert Museum, Tate, Vendome Press (in North America), Booth Clibborn Editions, SelfMadeHero, MoMA Children's Books, and 5 Continents.
+Founded by Harry N. Abrams in 1949, Abrams was the first company in the United States to specialize in the creation and distribution of art books. Abrams Comicarts publishes graphic novels and illustrated books about the creators and the history of comics art, animation, and cartoons.
 </p><p>
 Titles
 </p><p>
@@ -42,79 +108,73 @@ Titles
 <li><a href="AbramsBooks5.jpg">Art of Harvey Kurtzman: The Mad Genius of Comics</a> (2009)
 <li><a href="AbramsBooks6.jpg">Art of Jaime Hernandez: The Secrets of Life and Death</a> (2010)
 <li><a href="AbramsBooks7.jpg">Art Out of Time: Unknown Comics Visionaries, 1900-1969</a> (2006)
-<li>Auschwitz (2003)
-<li>Becoming Andy Warhol (2016)
+<li><a href="AbramsBooks10.jpg">Becoming Andy Warhol</a> (2016)
 <li><a href="../BestWeCouldDo/BestWeCouldDo.html">Best We Could Do</a> (2017)
-<li>Bizarre Romance (2018)
-<li>Bridge: How the Roeblings Connected Brooklyn to New York (2018)
-<li>Carter Family Don't Forget This Song (2012)
-<li>Cartoon America: Comic Art in the Library of Congress (2006)
-<li>Child's Play (2008)
-<li>Climate Changed: A Personal Journey through the Science (2014)
-<li>Comics Before 1945 (2004)
-<li>Comics: The Complete Collection (2008)
-<li>Commute: An Illustrated Memoir of Female Shame (2019)
-<li>Diary of an Awesome Friendly Kid: Rowley Jefferson's Journal (2019)
-<li>Drawing Power: Women's Stories of Sexual Violence, Harassment, and Survival: A Comics Anthology (2019)
-<li>Dread &amp; Superficiality: Woody Allen as Comic Strip (2009)
-<li>Earth Before Us (2017)
-<li>Economix (2012)	
-<li>El Deafo (2014)
-<li>Empire State (2011)
-<li>Explorer: The Hidden Doors (2014)
-<li>Explorer: The Lost Islands (2013)
-<li>Explorer: The Mystery Boxes (2012)
-<li>Faithful Spy: Dietrich Bonhoeffer and the Plot to Kill Hitler (2018)
-<li>Fire Story (2019)
-<li>Ghetto Klown (2015)
-<li>Hereville (2010)
-<li>Horror! The Horror! Comic Books the Government Didn't Want You to Read!	(2010)
-<li>How to Fake a Moon Landing: Exposing the Myths of Science Denial (2013)
-<li>Imitation Game: Alan Turing Decoded (2016)
-<li>Irmina	(2016)
-<li>Johnny Cash: I See a Darkness	(2009)
-<li>Just So Happens (2015)
+<li><a href="AbramsBooks8.jpg">Bizarre Romance</a> (2018)
+<li><a href="AbramsBooks9.jpg">Bridge: How the Roeblings Connected Brooklyn to New York</a> (2018)
+<li><a href="AbramsBooks11.jpg">Carter Family Don't Forget This Song</a> (2012)
+<li><a href="AbramsBooks12.jpg">Cartoon America: Comic Art in the Library of Congress</a> (2006)
+<li><a href="AbramsBooks13.jpg">Climate Changed: A Personal Journey through the Science</a> (2014)
+<li><a href="AbramsBooks14.jpg">Comics Before 1945</a> (2004)
+<li><a href="AbramsBooks15.jpg">Comics: The Complete Collection</a> (2008)
+<li><a href="AbramsBooks16.jpg">Commute: An Illustrated Memoir of Female Shame</a> (2019)
+<li><a href="AbramsBooks17.jpg">Diary of an Awesome Friendly Kid: Rowley Jefferson's Journal</a> (2019)
+<li><a href="AbramsBooks18.jpg">Drawing Power</a> (2019)
+<li><a href="AbramsBooks19.jpg">Dread &amp; Superficiality: Woody Allen as Comic Strip</a> (2009)
+<li><a href="AbramsBooks20.jpg">Earth Before Us</a> (2017)
+<li><a href="AbramsBooks21.jpg">Economix</a> (2012)	
+<li><a href="AbramsBooks22.jpg">El Deafo</a> (2014)
+<li><a href="AbramsBooks23.jpg">Empire State</a> (2011)
+<li><a href="AbramsBooks24.jpg">Explorer: The Hidden Doors</a> (2014)
+<li><a href="AbramsBooks25.jpg">Explorer: The Lost Islands</a> (2013)
+<li><a href="AbramsBooks26.jpg">Explorer: The Mystery Boxes</a> (2012)
+<li><a href="AbramsBooks27.jpg">Faithful Spy: Dietrich Bonhoeffer and the Plot to Kill Hitler</a> (2018)
+<li><a href="AbramsBooks28.jpg">Fire Story</a> (2019)
+<li><a href="AbramsBooks29.jpg">Funny Bones</a> (2015)
+<li><a href="AbramsBooks30.jpg">Ghetto Klown</a> (2015)
+<li><a href="AbramsBooks31.jpg">Hereville</a> (2010)
+<li><a href="AbramsBooks32.jpg">Horror! The Horror! Comic Books the Government Didn't Want You to Read!</a>	(2010)
+<li><a href="AbramsBooks33.jpg">How to Fake a Moon Landing: Exposing the Myths of Science Denial</a> (2013)
+<li><a href="AbramsBooks34.jpg">Imitation Game: Alan Turing Decoded</a> (2016)
+<li><a href="AbramsBooks35.jpg">Irmina</a>	(2016)
+<li><a href="AbramsBooks36.jpg">Johnny Cash: I See a Darkness</a>	(2009)
+<li><a href="AbramsBooks37.jpg">Just So Happens</a> (2015)
 <li><a href="Kirby.jpg">Kirby: King of Comics</a> (2008)
-<li>Krazy Kat: The Comic Art of George Herriman (1986)
-<li>Laugh-Out-Loud Cats Sell Out (2009)
-<li>M (2008)
-<li>Manga Shakespeare Romeo and Juliet	(2007)
-<li>Mars Attacks: 50th Anniversary Collection (2012)
-<li>Marvel: Five Fabulous Decades of the World's Greatest Comics (1991)
-<li>Meanwhile (2010)
-<li>Misadventures of Salem Hyde (2013)
-<li>Mom's Cancer (2006)
-<li>Mother Goose on the Loose (2003)
-<li>My Friend Dahmer (2012)
-<li>Nat Turner	(2008)
-<li>Nathan Hale's Hazardous Tales (2012)
-<li>Nobody's Fool: The Life and Times of Schlitzie the Pinhead (2019)
-<li>Octavia E. Butler's Kindred: A Graphic Novel Adaptation (2017)
-<li>An Olympic Dream - The Story Of Samia Yusuf Omar (2016)
-<li>One Trick Pony (2017)
-<li>Page by Paige (2011)
-<li>PS Magazine: The Best of the Preventive Maintenance Monthly (2011)
-<li>Red Zone: An Earthquake Story	(2019)
-<li>Red's Planet (2016)
-<li>Rutabaga the Adventure Chef (2015)
-<li>Showtime at the Apollo: The Epic Tale of Harlem’s Legendary Theater (2019)
-<li>Simpsons/Futurama Crossover Crisis (2010)
-<li>Sing No Evil (2014)
-<li>Someday Funnies (2011)
-<li>Spongebob Comics (2017)
-<li>Spongebob Comics Treasure Chest (2018)
-<li>Storyteller Without Words: The Wood Engravings of Lynd Ward (1974)
-<li>Tall Tales	(2008)
-<li>Toon Treasury of Classic Children's Comics (2009)
-<li>Trashed (2015)
-<li>Underground Classics: The Transformation of Comics into Comix (2009)
-<li>Undocumented A Worker's Fight (2018)
-<li>Voyage into the Deep (2004)
-<li>Warren Commission Report: A Graphic Investigation into the Kennedy Assassination (2014)
-<li>What Would Satan Do? (2005)
-<li>Whatever Happened to the World of Tomorrow? (2009)
-<li>Will &amp; Whit (2013)
-<li>Yiddishkeit: Jewish Vernacular and the New Land (2011)
+<li><a href="AbramsBooks38.jpg">Krazy Kat: The Comic Art of George Herriman</a> (1986)
+<li><a href="AbramsBooks39.jpg">Laugh-Out-Loud Cats Sell Out</a> (2009)
+<li><a href="AbramsBooks40.jpg">Manga Shakespeare Romeo and Juliet</a> (2007)
+<li><a href="AbramsBooks41.jpg">Mars Attacks: 50th Anniversary Collection</a> (2012)
+<li><a href="AbramsBooks42.jpg">Marvel: Five Fabulous Decades of the World's Greatest Comics</a> (1991)
+<li><a href="AbramsBooks43.jpg">Meanwhile</a> (2010)
+<li><a href="AbramsBooks44.jpg">Misadventures of Salem Hyde</a> (2013)
+<li><a href="AbramsBooks45.jpg">Mom's Cancer</a> (2006)
+<li><a href="AbramsBooks46.jpg">My Friend Dahmer</a> (2012)
+<li><a href="AbramsBooks47.jpg">Nat Turner</a>	(2008)
+<li><a href="AbramsBooks48.jpg">Nathan Hale's Hazardous Tales</a> (2012)
+<li><a href="AbramsBooks49.jpg">Nobody's Fool: The Life and Times of Schlitzie the Pinhead</a> (2019)
+<li><a href="AbramsBooks50.jpg">Octavia E. Butler's Kindred: A Graphic Novel Adaptation</a> (2017)
+<li><a href="AbramsBooks51.jpg">Olympic Dream - The Story Of Samia Yusuf Omar</a> (2016)
+<li><a href="AbramsBooks52.jpg">One Trick Pony</a> (2017)
+<li><a href="AbramsBooks53.jpg">Page by Paige</a> (2011)
+<li><a href="AbramsBooks54.jpg">PS Magazine: The Best of the Preventive Maintenance Monthly</a> (2011)
+<li><a href="AbramsBooks55.jpg">Red Zone: An Earthquake Story</a> (2019)
+<li><a href="AbramsBooks56.jpg">Red's Planet</a> (2016)
+<li><a href="AbramsBooks57.jpg">Rutabaga the Adventure Chef</a> (2015)
+<li><a href="AbramsBooks58.jpg">Showtime at the Apollo: The Epic Tale of Harlem’s Legendary Theater</a> (2019)
+<li><a href="AbramsBooks59.jpg">Simpsons/Futurama Crossover Crisis</a> (2010)
+<li><a href="AbramsBooks60.jpg">Sing No Evil</a> (2014)
+<li><a href="AbramsBooks61.jpg">Someday Funnies</a> (2011)
+<li><a href="AbramsBooks62.jpg">Spongebob Comics</a> (2017)
+<li><a href="AbramsBooks63.jpg">Spongebob Comics Treasure Chest</a> (2018)
+<li><a href="AbramsBooks64.jpg">Toon Treasury of Classic Children's Comics</a> (2009)
+<li><a href="AbramsBooks65.jpg">Trashed</a> (2015)
+<li><a href="AbramsBooks66.jpg">Underground Classics: The Transformation of Comics into Comix</a> (2009)
+<li><a href="AbramsBooks67.jpg">Undocumented A Worker's Fight</a> (2018)
+<li><a href="AbramsBooks68.jpg">Warren Commission Report: A Graphic Investigation into the Kennedy Assassination</a> (2014)
+<li><a href="AbramsBooks69.jpg">We Won't See Auschwitz</a> (2003)
+<li><a href="AbramsBooks70.jpg">What Would Satan Do?</a> (2005)
+<li><a href="AbramsBooks71.jpg">Whatever Happened to the World of Tomorrow?</a> (2009)
+<li><a href="AbramsBooks72.jpg">Yiddishkeit: Jewish Vernacular and the New Land</a> (2011)
 </p>
 
 </body>
