--- a/Charlton/Charlton.html
+++ b/Charlton/Charlton.html
@@ -68,6 +68,26 @@
 <div class="mySlides" style="text-align: center;"><img src="Charlton48.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Charlton49.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Charlton50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Charlton70.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -85,7 +105,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton3.jpg">175 New Cartoons</a> (1977)
 <li><a href="Charlton4.jpg">1776</a> (1973)
 <li><a href="Charlton5.jpg">Abbott and Costello</a> (1968)
-<li><a href="Charlton6.jpg">All American Sports</a>
+<li><a href="Charlton6.jpg">All American Sports</a> (1967)
 <li><a href="Charlton7.jpg">Army Attack</a> (1964)
 <li><a href="Charlton8.jpg">Army War Heroes</a> (1963)
 <li><a href="Charlton9.jpg">Atom the Cat</a> (1957)
@@ -94,7 +114,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton12.jpg">Atomic Rabbit</a> (1955)
 <li><a href="Charlton13.jpg">Attack!</a>  (1958)
 <li><a href="Charlton14.jpg">Attack at Sea</a>   (1968)
-<li><a href="Charlton15.jpg">Badge of Justice</a>
+<li><a href="Charlton15.jpg">Badge of Justice</a> (1955)
 <li><a href="Charlton16.jpg">Barney and Betty Rubble</a> (1973)
 <li><a href="Charlton17.jpg">Barney Google and Snuffy Smith</a> (1970)
 <li><a href="Charlton18.jpg">Battlefield Action</a> (1957)
@@ -129,7 +149,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton45.jpg">Charlton Bullseye</a>  (1981)
 <li><a href="Charlton46.jpg">Charlton Classics</a> (1980)
 <li><a href="Charlton47.jpg">Charlton Premiere</a>  (1967)
-<li><a href="Charlton48.jpg">Charlton Professional Football</a>
+<li><a href="Charlton48.jpg">Charlton Sport Library</a> (1970)
 <li><a href="Charlton49.jpg">Cheyenne Kid</a>  (1957)
 <li><a href="Charlton50.jpg">Cody Of The Pony Express</a> (1955)
 <li><a href="Charlton51.jpg">Comedy Capers</a> (1986)
@@ -231,7 +251,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton140.jpg">The Six Million Dollar Man (1976)
 <li><a href="../SpaceAdventures/SpaceAdventures.html">Space Adventures</a> (1952) 
 <li><a href="Charlton141.jpg">Space: 1999</a>  (1975)
-<li><a href="../SpaceWar/SpaceWar.html">Space War</a>(1959) 
+<li><a href="../SpaceWar/SpaceWar.html">Space War</a> (1959) 
 <li><a href="Charlton142.jpg">Strange Suspense Stories</a> (1954)
 <li><a href="Charlton143.jpg">Submarine Attack</a>  (1958) 
 <li><a href="Charlton144.jpg">Sue &amp; Sally Smith</a> (1962) 
